@@ -1,3 +1,11 @@
+2016-02-03 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCClospre.hpp:
+	  Fix compare operator, patch #267 by Peter Dons Tychsen.
+	* device/lib/pic16/libsdcc/char/divschar.c,
+	  device/lib/pic16/libsdcc/char/modschar.c:
+	  Fix signedness of pci16 char support routines.
+
 2016-02-01 Ben Shi <powerstudio1st AT 163 DOT com>
  
 	* src/SDCCast.c
